# Portfolio

./: .gitignore  Cargo.toml  Makefile  README.md  SETUP.md  TESTING.md  UPDATES.md  build.rs  in.txt  out.txt  rust-toolchain.toml
api/: Cargo.toml  build.rs
api/src/: lib.rs  pool.rs  requests.rs  test.rs
api/src/guards/data/: letter.rs  portfolio.rs
api/src/guards/request/auth/: admin.rs  candidate.rs
api/src/routes/: admin.rs  candidate.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: crypto.rs  crypto_helpers.rs  error.rs  lib.rs
core/src/database/mutation/: admin_session.rs  application.rs  candidate.rs  parent.rs  session.rs
core/src/database/query/: admin.rs  application.rs  candidate.rs  parent.rs  session.rs
core/src/models/: application.rs  auth.rs  candidate.rs  candidate_details.rs  grade.rs  school.rs
core/src/policies/: candidate.rs  context.rs  mod.rs
core/src/services/: admin_service.rs  application_service.rs  candidate_service.rs  parent_service.rs  portfolio_service.rs  session_service.rs
core/src/utils/: csv.rs  date.rs  db.rs  mod.rs  response.rs
entity/: Cargo.toml
entity/src/: admin.rs  admin_session.rs  application.rs  candidate.rs  parent.rs  session.rs  session_trait.rs
harness/: Cargo.toml  flame-graph.html
harness/src/: main.rs
migration/: Cargo.toml
migration/src/: m20221024_134454_insert_sample_admin.rs  m20221027_194728_session_create_user_fk.rs
policies/: Cargo.toml  mod.rs
policies/src/: candidate.rs  context.rs  data.rs  key.rs  lib.rs  request.rs
sandbox/: .gitignore  Cargo.toml  NOTES.md  build.rs  rust-toolchain.toml  wasm32-rlbox.json
sandbox/src/: lib.rs
sandbox/wasm_target/: .future-incompat-report.json  .rustc_info.json
sandbox/wasm_target/release/.fingerprint/alohomora_build-08fc5460a59cbd21/: dep-lib-alohomora_build  lib-alohomora_build  lib-alohomora_build.json  output-lib-alohomora_build
sandbox/wasm_target/release/.fingerprint/alohomora_derive-a0687a04cb4d2dbb/: dep-lib-alohomora_derive  lib-alohomora_derive  lib-alohomora_derive.json  output-lib-alohomora_derive
sandbox/wasm_target/release/.fingerprint/anyhow-2fb2333afc31b8b7/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/attribute-derive-300ae773099a38ed/: lib-attribute-derive  lib-attribute-derive.json
sandbox/wasm_target/release/.fingerprint/attribute-derive-macro-37b150c7a831a39a/: lib-attribute-derive-macro  lib-attribute-derive-macro.json
sandbox/wasm_target/release/.fingerprint/autocfg-9d90b71b36fc540c/: lib-autocfg  lib-autocfg.json
sandbox/wasm_target/release/.fingerprint/bytes-c1576ce1f14ad47a/: lib-bytes  lib-bytes.json
sandbox/wasm_target/release/.fingerprint/cargo_toml-db568ca91e6add43/: lib-cargo_toml  lib-cargo_toml.json
sandbox/wasm_target/release/.fingerprint/cc-b47e4ff54ed2209f/: lib-cc  lib-cc.json
sandbox/wasm_target/release/.fingerprint/cfg-if-6c4effe28de53400/: lib-cfg-if  lib-cfg-if.json
sandbox/wasm_target/release/.fingerprint/collection_literals-24b12897d677c638/: lib-collection_literals  lib-collection_literals.json
sandbox/wasm_target/release/.fingerprint/compiler_builtins-086ca1f3d853a620/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/const_fn-0ae3d5c4254154bd/: lib-const_fn  lib-const_fn.json
sandbox/wasm_target/release/.fingerprint/const_fn-378bd1c6d0bc6997/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/const_fn-d85f1edc5b02d628/: run-build-script-build-script-build  run-build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/cookie-833a7694b95267fb/: run-build-script-build-script-build  run-build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/cookie-af5f4cbe5fc790d9/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/cookie-cc8913aa4f17a4fc/: lib-cookie  lib-cookie.json
sandbox/wasm_target/release/.fingerprint/crossbeam-utils-528cd2bdf48fc019/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/derive-where-2ca8172969bff47d/: lib-derive-where  lib-derive-where.json
sandbox/wasm_target/release/.fingerprint/either-b24cdd07e53dba72/: lib-either  lib-either.json
sandbox/wasm_target/release/.fingerprint/equivalent-983ea3ca863ec5b7/: lib-equivalent  lib-equivalent.json
sandbox/wasm_target/release/.fingerprint/fnv-0d87bce8bb3b9348/: lib-fnv  lib-fnv.json
sandbox/wasm_target/release/.fingerprint/futures-channel-59bfa30784ee98c4/: lib-futures-channel  lib-futures-channel.json
sandbox/wasm_target/release/.fingerprint/futures-core-3553612dd19755eb/: lib-futures-core  lib-futures-core.json
sandbox/wasm_target/release/.fingerprint/futures-sink-efc94a8dba92c70e/: lib-futures-sink  lib-futures-sink.json
sandbox/wasm_target/release/.fingerprint/futures-task-30572154cbed7c24/: lib-futures-task  lib-futures-task.json
sandbox/wasm_target/release/.fingerprint/futures-util-be881edaa72967a5/: lib-futures-util  lib-futures-util.json
sandbox/wasm_target/release/.fingerprint/generic-array-a4f0ca02443489d7/: build-script-build-script-build  build-script-build-script-build.json
sandbox/wasm_target/release/.fingerprint/h2-28cfab504e157df4/: lib-h2  lib-h2.json
sandbox/wasm_target/release/.fingerprint/hashbrown-3a28ad3ad2c0ff7b/: lib-hashbrown  lib-hashbrown.json
sandbox/wasm_target/release/.fingerprint/hashbrown-840c73b774cdb200/: lib-hashbrown  lib-hashbrown.json
sandbox/wasm_target/release/.fingerprint/http-a2e56882fe6c1aeb/: lib-http  lib-http.json
sandbox/wasm_target/release/.fingerprint/http-body-672e19963b7729f6/: lib-http-body  lib-http-body.json
sandbox/wasm_target/release/.fingerprint/httparse-e671b74c7119072f/: lib-httparse  (+1 more)
sandbox/wasm_target/wasm32-rlbox/release/: libportfolio_sandbox.d  libportfolio_sandbox.rlib  portfolio_sandbox.d  portfolio_sandbox.wasm
(+498 files in other folders)
