[package]
name = "portfolio"
version = "2.0.0"
authors = ["Vojtěch Jungmann", "Sebastian Pravda"]
edition = "2021"
publish = false

[workspace]
members = [".", "api", "core", "entity", "migration", "cli"]

[dependencies]
portfolio-api = { path = "api" }
alohomora = { path = "../alohomora/alohomora" }
alohomora_derive = { path = "../alohomora/alohomora_derive" }

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }