[package]
name = "portfolio"
version = "2.0.0"
authors = ["Vojtěch Jungmann", "Sebastian Pravda"]
edition = "2021"
publish = false

[workspace]
#members = [".", "api", "core", "entity", "migration", "cli", "policies"]
members = [".", "api", "core", "entity", "migration", "policies", "harness"]

[dependencies]
portfolio-api = { path = "api" }

[dependencies.sea-orm-rocket]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
# features = [
#     #"sqlx-mysql",
#     # TODO: Migrate to rustls for better compatibility with various OS
#     #"runtime-tokio-native-tls"
# ]

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }