[package]
name = "portfolio-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
url = "^2.3"
clap = { version = "^4.3", features = ["cargo"] }

portfolio-entity = { path = "../entity" }
portfolio-core = { path = "../core" }

[dependencies.tokio]
version = "^1.28"
features = [
    "process",
    "macros",
]

[dependencies.sea-orm]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ]