[package]
name = "portfolio-core"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = "^0.4"

portfolio-entity = { path = "../entity" }

# serde
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "^0.16", features = ["derive"] }

# csv
csv = "^1.2"

async-trait = "^0.1"

# error
thiserror = "^1.0"

# env
dotenv = "^0.15"

# async
tokio = "^1.28"
futures = "^0.3"
async-compat = "^0.2"

# file identifier
infer = "^0.13"

async_zip = {version = "0.0.15", features = ["deflate", "tokio"]}

# crypto
rand = "^0.8"
aes-gcm-siv = { version = "^0.11", features = ["std"] }
argon2 = { version = "^0.5", features = ["std"] }
age =  { version = "^0.9", features = ["async"] }
secrecy = { version = "^0.8" }
base64 = "^0.21"
uuid = { version = "^1.3", features = ["v4"] }

# logging
log = "^0.4"
fern = "^0.6"
lazy_static = "*"

# alohomora
alohomora = { path = "../../alohomora/alohomora", features = ["default", "orm"] }
alohomora_derive = { path = "../../alohomora/alohomora_derive" }
# portfolio-policies = { path = "../policies" }
# portfolio_sandbox ={ path = "../sandbox" }
# portfolio-types = { path = "../types" }

rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }

[build-dependencies]
alohomora_build = { path = "../../alohomora/alohomora_build" }

[dependencies.sea-orm]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ]
# version = "^0.11"
# features = [
#     "runtime-tokio-native-tls",
#     "sqlx-postgres",
#     "sqlx-mysql",
# ]

[dependencies.sea-orm-rocket]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"

[dev-dependencies]
portfolio-api = { path = "../api" }
tokio = { version = "^1.28", features = ["macros"] }
async-tempfile = "^0.2"
serial_test = "^2.0"
once_cell = "^1.17" 
