[package]
name = "portfolio-entity"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
async-trait = "^0.1"

[dependencies.sea-orm]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ]