[package]
name = "portfolio-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
portfolio-api = { path = "../api" }
portfolio-core = { path = "../core" }
alohomora = { path = "../../alohomora/alohomora" }
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }