[package]
name = "portfolio-migration"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.28", features = ["macros"] }

serde = { version = "^1.0", features = ["derive"] }
chrono = "^0.4"
portfolio-entity = { path = "../entity" }
alohomora = { path = "../../alohomora/alohomora" }
alohomora_derive = { path = "../../alohomora/alohomora_derive" }

[dependencies.sea-orm-migration]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls" ]
# version = "^0.11"
# features = [ "runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"]
