[package]
name = "portfolio-policies"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main" }
async-trait = { version = "^0.1" }
alohomora = { path = "../../alohomora/alohomora" }
alohomora_derive = { path = "../../alohomora/alohomora_derive" }

[dependencies.sea-orm-migration]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"
features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls" ]

[dependencies.sea-orm-rocket]
git = "https://github.com/KinanBab/sea-orm.git"
branch = "main"