[package]
name = "portfolio_sandbox" 
# TODO: our build scripts (specifically the makefile) mess up kebab-case names :(
version = "0.1.0"
authors = ["Alex Portland <alexanderportland1@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "^1.2"
# alohomora = { path = "../../alohomora/alohomora" }
alohomora_derive = { path = "../../alohomora/alohomora_derive" }
alohomora_sandbox = { path = "../../alohomora/alohomora_sandbox" }
# don't need everything below here
linfa = "0.6.1"
linfa-linear = "0.6.1"
ndarray = "0.15.6"
sha2 = "0.10.8" 

[build-dependencies]
alohomora_build = { path = "../../alohomora/alohomora_build" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata]
sandboxes = [
  "naive_date_str",
  "serde_from_grade", # this one definitely works
  "serde_from_school",
  "serde_to_school",
  "serde_to_grade",
  "serde_from_tuple",
  "serialize_app_row",
  "serialize_cand_row",
]